# personal-ai-employee

./: .env.example  .gitignore  GMAIL_SETUP.md  README.md  ecosystem.config.js  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Done/: DONE_business_test.md  DONE_business_test.txt  DONE_detect_test.md  DONE_detect_test.txt  DONE_hello2.md  DONE_hello2.txt  DONE_task1.md  DONE_task1.txt
AI_Employee_Vault/Inbox/: business_test.txt  detect_test.txt  hello2.txt  test_task.txt  weekly_summary.txt
AI_Employee_Vault/Needs_Action/: business_test_metadata.json  detect_test_metadata.json  hello2_metadata.json  task1.txt  task1_metadata.json
AI_Employee_Vault/skills/: SKILL_approval_process.md  SKILL_dashboard_update.md  SKILL_response_formatting.md  SKILL_triage.md
scripts/: ceo_briefing.bat  process_tasks.bat  process_tasks_silver.bat  run_claude.sh  run_gemini.sh  setup_oauth.py  setup_oauth.sh
specs/1-gold-tier/: plan.md  research.md  spec.md
specs/1-silver-tier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/ai_employee/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: ai_processor.py  approved_watcher.py  base_watcher.py  ceo_briefing.py  dashboard_updater.py  email_mcp.py  filesystem_watcher.py  gemini_processor.py  gmail_auth.py  gmail_watcher.py  hitl_watcher.py  linkedin_auth.py  linkedin_generator.py  linkedin_poster.py
(+20 files in other folders)
